# typestate-rs

./: .clippy.toml  .gitignore  404.html  CITATION.cff  CONTRIBUTING.md  Cargo.toml  README.md  SYNTAX.md  annex_1.html  chapter_1.html  chapter_2.html  chapter_3.html  chapter_4.html  index.html  justfile  print.html  render.sh  searchindex.js  searchindex.json
.github/workflows/: ci.yml  deploy-book.yml
examples/: generics.rs  lifetime_automata.rs  light_bulb.rs  smart_bulb.rs  stateful_automata.rs  stateful_automata_constructors.rs  stateful_automata_enumerate.rs  traffic_light.rs
examples/.github/workflows/: ci.yml
examples/bulbs/: dead_bulb.rs  light_bulb.rs  smart_bulb.rs
features/: compilation_flags.html  features.html  macro_attributes.html
src/: lib.rs
src/visitors/: det.rs  mod.rs  non_det.rs  transition.rs
tests/: 01-single-struct.rs  02-no-mod.rs  macro_tests.rs
tests/fail/: complex_unreachable_state.rs  complex_unreachable_state.stderr  conflicting_automata_attr.rs  conflicting_automata_attr.stderr  conflicting_state_attr.rs  conflicting_state_attr.stderr  duplicate_automata_attr.rs  duplicate_automata_attr.stderr  empty_automata.stderr  empty_module.rs  empty_module.stderr  missing_initial_final_states.rs  missing_initial_final_states.stderr  nested_enums.rs  nested_enums.stderr  undeclared_variant.rs  undeclared_variant.stderr  unsupported_variant.rs
tests/pass/: empty_constructors.rs  empty_enumerate.rs  lifetime_automata.rs  lifetimes_automata.rs  non-deterministic_enumerate_into.rs  non-deterministic_initial_state.rs  stateful_automata_constructors.rs  stateful_automata_enumerate.rs
typestate-automata/: Cargo.toml  README.md
typestate-automata/src/: adjlist_dfa.rs  automata.rs  dot.rs  hashmap_dfa.rs  intermediate_graph.rs  lib.rs  mermaid.rs  plantuml.rs
typestate-book/: book.toml
typestate-book/src/: SUMMARY.md  annex_1.md  chapter_1.md  chapter_1.md#a-brief-intro-to-typestates  chapter_2.md  chapter_3.md  chapter_4.md
typestate-book/src/features/: compilation_flags.md  macro_attributes.md
typestate-client/: Cargo.toml
typestate-client/src/: main.rs
typestate-lite/: Cargo.toml
typestate-lite/examples/: scratch.rs
typestate-lite/src/: lib.rs
typestate-lite/tests/: macro_tests.rs
typestate-macro/: Cargo.toml
typestate-macro/src/: lib.rs
typestate-macro/tests/: 01-single-struct.rs  02-no-mod.stderr  03-single-struct-w-state.rs  complex_unreachable_state.rs  conflicting_automata_attr.stderr  conflicting_state_attr.rs  conflicting_state_attr.stderr  duplicate_automata_attr.rs  duplicate_state_attr.rs  duplicate_state_attr.stderr  empty_automata.stderr  empty_module.stderr  macro_tests.rs  stateful_automata.rs  unproductive_state.rs  unproductive_state.stderr  useless_state.rs  useless_state.stderr
typestate-macro/tests/fail/: conflicting_automata_attr.stderr  empty_automata.rs  nested_enums.rs  unsupported_variant.stderr
typestate-proc-macro/: Cargo.toml  intermediate_graph.rs
typestate-proc-macro/src/: intermediate_graph.rs  lib.rs
typestate-proc-macro/src/igraph/: export.rs  mod.rs  validate.rs
typestate-proc-macro/src/visitors/: decision.rs  det.rs  mod.rs  non_det.rs  state.rs  transition.rs
typestate-proc-macro/tests/: macro_tests.rs
typestate-proc-macro/tests/fail/: complex_unreachable_state.rs  conflicting_automata_attr.rs  conflicting_state_attr.rs  duplicate_automata_attr.rs  duplicate_automata_attr.stderr  duplicate_state_attr.rs  empty_automata.rs  empty_module.stderr  missing_initial_final_states.rs  missing_initial_final_states.stderr  nested_enums.rs  undeclared_variant.rs  unsupported_variant.rs
typestate-proc-macro/tests/pass/: stateful_automata.rs
