[package]
name = "typestate"
version = "0.7.0-rc5"
edition = "2018"
authors = ["José Duarte <jmg.duarte@campus.fct.unl.pt>"]
description = "A proc macro DSL for typestates"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["typestate"]
categories = ["development-tools"]
homepage = "https://github.com/rustype/typestate-rs"
repository = "https://github.com/rustype/typestate-rs"
autotests = false

[features]
default = ["std", "mermaid-docs"]
std = ["typestate-proc-macro/std"]
dot-export = ["typestate-proc-macro/dot"]
plantuml-export = ["typestate-proc-macro/plantuml"]
mermaid-docs = ["typestate-proc-macro/mermaid", "aquamarine"]

[dependencies.typestate-proc-macro]
version = "0.7.0-rc5"
path = "typestate-proc-macro"
package = "typestate-proc-macro"

[dependencies]
aquamarine = { version = "^0.1.9", optional = true }

[workspace]
members = ["typestate-automata", "typestate-proc-macro"]
