[package]
name = "typestate"
version = "0.8.0"
edition = "2021"
authors = ["José Duarte <jmg.duarte@campus.fct.unl.pt>"]
description = "A proc macro DSL for typestates"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["typestate"]
categories = ["development-tools"]
homepage = "https://github.com/rustype/typestate-rs"
repository = "https://github.com/rustype/typestate-rs"
autotests = false

[features]
default = ["std", "mermaid-docs"]
std = ["typestate-proc-macro/std"]
export-dot = ["typestate-proc-macro/dot"]
export-plantuml = ["typestate-proc-macro/plantuml"]
mermaid-docs = ["typestate-proc-macro/mermaid", "aquamarine"]

[[test]]
name = "tests"
path = "tests/macro_tests.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
rustversion = "1.0"

[dependencies.typestate-proc-macro]
version = "0.8.0"
path = "typestate-proc-macro"
package = "typestate-proc-macro"

[dependencies]
aquamarine = { version = "^0.1.9", optional = true }

[workspace]
members = ["typestate-proc-macro"]
