[package]
name = "typestate"
version = "0.8.0"
edition = "2018"
authors = ["José Duarte <jmg.duarte@campus.fct.unl.pt>"]
description = "A proc macro DSL for typestates"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["typestate"]
categories = ["development-tools"]
homepage = "https://github.com/rustype/typestate-rs"
repository = "https://github.com/rustype/typestate-rs"
autotests = false

[features]
default = ["std", "docs-mermaid"]

# should probably deprecate this feature
# until someone needs it, it only adds complexity
std = ["typestate-proc-macro/std"]

# features to export diagrams
export-dot = ["typestate-proc-macro/dot"]
export-plantuml = ["typestate-proc-macro/plantuml"]
export-mermaid = ["typestate-proc-macro/mermaid"]

# export mermaid state machines inside the docs
docs-mermaid = ["typestate-proc-macro/docs-mermaid", "aquamarine"]

[[test]]
name = "tests"
path = "tests/macro_tests.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
rustversion = "1.0"

[dependencies.typestate-proc-macro]
version = "0.8.0"
path = "typestate-proc-macro"
package = "typestate-proc-macro"

[dependencies]
aquamarine = { version = "^0.1.9", optional = true }

[workspace]
members = ["typestate-proc-macro"]
