[package]
name = "typestate-automata"
version = "0.4.3"
authors = ["José Duarte <jmg.duarte@campus.fct.unl.pt>"]
edition = "2018"
description = "An automata library for the typestate crate"
license = "MIT OR Apache-2.0"
keywords = ["typestate", "automata"]
categories = ["development-tools"]
homepage = "https://github.com/rustype/typestate-rs"
repository = "https://github.com/rustype/typestate-rs"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dot = []
plantuml = []

[dependencies]