[package]
name = "typestate-client"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["José Duarte <jmg.duarte@campus.fct.unl.pt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [features]
# typestate_debug = ["typestate/typestate_debug"]

[dependencies]
typestate = { features=["typestate_debug"], path = "../typestate-macro" }