[package]
name = "typestate"
version = "0.3.0-alpha"
authors = ["José Duarte <jmg.duarte@campus.fct.unl.pt>"]
edition = "2018"
description = "A proc macro DSL for typestates"
readme = "README.md"
license-file = "LICENSE"
keywords = ["typestate"]
categories = ["development-tools"]
homepage = "https://github.com/rustype/typestate-rs"
repository = "https://github.com/rustype/typestate-rs"
autotests = false

[features]
typestate_debug = ["typestate-automata/dot"]

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/macro_tests.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits", "visit-mut", "parsing", "full"] }
proc-macro2 = "1.0"

typestate-automata = { path = "../typestate-automata" }