[package]
name = "typestate-proc-macro"
version = "0.0.1"
edition = "2018"
authors = ["José Duarte <jmg.duarte@campus.fct.unl.pt>"]
description = "A proc macro DSL for typestates"
license = "MIT OR Apache-2.0"
keywords = ["typestate"]
categories = ["development-tools"]
homepage = "https://github.com/rustype/typestate-rs"
repository = "https://github.com/rustype/typestate-rs"
autotests = false

[features]
debug_dot = ["typestate-automata/dot"]
debug_plantuml = ["typestate-automata/plantuml"]
debug_mermaid = ["typestate-automata/mermaid", "aquamarine"]

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/macro_tests.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits", "visit-mut", "parsing", "full"] }
proc-macro2 = "1.0"
darling = "0.12"

aquamarine = { version = "0.1", optional = true }

typestate-automata = { version = "0.4.2", path = "../typestate-automata" }
